# cheese-fork

./: .gitmodules  cheesefork.js  collect_courses.py  courses.txt  index.html  masluls.csv  pyproject.toml
.github/workflows/: deploy.yml
courses/: courses_202102.min.js  courses_202201.min.js  courses_202202.js  courses_202202.min.js  courses_202301.min.js  courses_202302.min.js  courses_202401.min.js  courses_202402.min.js
deploy/: cheesefork.js  index.html
deploy/courses/: courses_202301.min.js
