[project]
name = "cheese-fork"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "hujiscrape (>=1.0.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"


[tool.poetry.dependencies]
