[project]
name = "cheese-fork"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "hujiscrape>=1.1.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true
